# phishcat

./: README.md  phishcat.py  pyproject.toml  requirements.txt  scan.py
modules/: eml_loader.py  headers.py  report.py
phishcat/: cli.py
phishcat/modules/: attachments.py  body.py  eml_loader.py  engine.py  headers.py  keywords.txt  report.py
